smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-defined-twice.smithy
// Syntax error at line 4, column 1: Unknown shape type: namespace | Model
$version: "2.0"
namespace com.foo
namespace com.baz
